# epics

./: .gitignore  CMakeLists.txt  main.c
ecs/: ecs_archetype.c  ecs_archetype.h  ecs_entity.c  ecs_entity.h  ecs_observer.c  ecs_observer.h  ecs_system.h  ecs_types.h  ecs_world.c  ecs_world.h
ecs/datastructure/: ecs_set.h  ecs_sparseset.h  ecs_vec.h  ecs_vec_map.h  ecs_vec_sort.h
ecs/include/: ecs_config.h
libs/datastructure/: CMakeLists.txt  ecs_vec.h  ecs_vecpp.hpp  span.hpp  sparseset.hpp  vec.h
libs/ecs/: CMakeLists.txt  ecs.hpp  ecs_archetype.hpp  ecs_entity.hpp  ecs_query.hpp  ecs_system.hpp  ecs_type.hpp  ecs_world.cpp  ecs_world.hpp  hash.hpp
libs/rayflect/: CMakeLists.txt  rayflect.hpp
src/: main.cpp
src/ecs/: archetype.hpp  component.hpp  ecs_fwd.hpp  vec.cpp  vec.h  world.cpp  world.hpp
src/plugins/: SfmlPlugin.cpp  SfmlPlugin.hpp
tests/: test_relationship.c  test_world.c
tests/datastructure/: test_sparseset.cpp
tests/ecs/: test_entity.cpp  test_system.cpp
tests/rayflect/: test_reflection.cpp
